// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders level 1 correctly 1`] = `
<a
  className="sc-bdVaJa jlhvWq"
  href="/introduction"
  level={1}
  title="Introduction"
>
  <span
    className="sc-bwzfXH fkhtsm"
  >
    Introduction
  </span>
</a>
`;

exports[`MenuItem renders level 2 correctly 1`] = `
<a
  className="sc-bdVaJa eqvLpW"
  href="/introduction"
  level={2}
  title="Introduction"
>
  <span
    className="sc-bwzfXH jBPDSi"
  >
    Introduction
  </span>
</a>
`;
